add more configs

--- a/configs/brew/Brewfile
+++ b/configs/brew/Brewfile
@@ -1,13 +1,56 @@
+tap "caskroom/cask"
+tap "caskroom/drivers"
 tap "homebrew/bundle"
 tap "homebrew/core"
 tap "neovim/neovim"
+tap "puma/puma"
+cask "java"
+brew "ack"
+brew "autoconf"
 brew "autojump"
+brew "bash"
+brew "coreutils"
+brew "elasticsearch"
+brew "git"
+brew "jpeg"
+brew "libtool"
+brew "fontforge"
 brew "gnupg"
-brew "node"
-brew "python"
+brew "go"
 brew "python3"
+brew "grc"
+brew "htop"
+brew "imagemagick"
+brew "jp2a"
+brew "oniguruma"
+brew "jq"
+brew "libssh2"
+brew "libgit2"
+brew "mdp"
+brew "n"
+brew "neovim"
+brew "opam"
+brew "postgresql"
+brew "ruby-build"
+brew "rbenv"
+brew "ripgrep"
+brew "roundup"
+brew "spaceman-diff"
+brew "spark"
+brew "the_silver_searcher"
+brew "tree"
+brew "unrar"
+brew "watchman"
 brew "wget"
+brew "wifi-password"
 brew "yarn"
+brew "youtube-dl"
 brew "zsh"
-brew "zsh-completions"
-brew "neovim/neovim/neovim"
+brew "puma/puma/puma-dev"
+cask "adium"
+cask "atom"
+cask "handbrake"
+cask "seashore"
+cask "slack"
+cask "transmission"
+cask "vlc"
