add setup.sh and some changes

--- a/configs/brew/Brewfile
+++ b/configs/brew/Brewfile
@@ -1,9 +1,10 @@
+cask_args appdir: '/Applications'
+
 tap "caskroom/cask"
 tap "caskroom/drivers"
 tap "homebrew/bundle"
 tap "homebrew/core"
 tap "neovim/neovim"
-tap "puma/puma"
 cask "java"
 brew "ack"
 brew "autoconf"
@@ -46,8 +47,6 @@ brew "wifi-password"
 brew "yarn"
 brew "youtube-dl"
 brew "zsh"
-brew "puma/puma/puma-dev"
-cask "adium"
 cask "atom"
 cask "handbrake"
 cask "seashore"
