--- a/configs/brew/Brewfile
+++ b/configs/brew/Brewfile
@@ -1,5 +1,3 @@
-cask_args appdir: '/Applications'
-
 tap "caskroom/cask"
 tap "caskroom/drivers"
 tap "caskroom/fonts"
@@ -14,7 +12,6 @@ brew "bash"
 brew "coreutils"
 brew "elasticsearch"
 brew "git"
-brew "python"
 brew "jpeg"
 brew "libtool"
 brew "fontforge"
@@ -32,7 +29,7 @@ brew "libgit2"
 brew "mdp"
 brew "n"
 brew "neovim"
-brew "opam"
+brew "python"
 brew "postgresql"
 brew "ruby-build"
 brew "rbenv"
@@ -50,6 +47,7 @@ brew "wifi-password"
 brew "yarn"
 brew "youtube-dl"
 brew "zsh"
+brew "zsh-autosuggestions"
 cask "adium"
 cask "alfred"
 cask "apache-couchdb"
