--- a/configs/brew/Brewfile
+++ b/configs/brew/Brewfile
@@ -1,53 +1,67 @@
-tap "caskroom/cask"
-tap "caskroom/drivers"
-tap "caskroom/fonts"
 tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-drivers"
+tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "neovim/neovim"
-cask "java"
+tap "puma/puma"
 brew "ack"
+brew "readline"
+brew "xz"
+brew "python"
+brew "clingo", link: false
 brew "autoconf"
 brew "autojump"
 brew "bash"
+brew "bat"
+brew "libtool"
+brew "cfssl"
+brew "cmake"
 brew "coreutils"
 brew "elasticsearch"
-brew "git"
+brew "exiftool"
 brew "jpeg"
-brew "libtool"
 brew "fontforge"
-brew "gnupg"
+brew "git"
 brew "go"
-brew "python3"
+brew "gnupg"
+brew "googler"
 brew "grc"
 brew "htop"
 brew "imagemagick"
 brew "jp2a"
 brew "oniguruma"
 brew "jq"
+brew "kubernetes-cli"
+brew "kubectx"
+brew "libev"
 brew "libssh2"
 brew "libgit2"
+brew "macvim"
 brew "mdp"
 brew "n"
 brew "neovim"
-brew "python"
 brew "postgresql"
 brew "ruby-build"
 brew "rbenv"
+brew "reattach-to-user-namespace"
+brew "redis"
 brew "ripgrep"
 brew "roundup"
-brew "ruby"
+brew "ruby", link: true
 brew "spaceman-diff"
 brew "spark"
 brew "the_silver_searcher"
+brew "tmux"
 brew "tree"
 brew "unrar"
 brew "watchman"
 brew "wget"
 brew "wifi-password"
-brew "yarn"
-brew "youtube-dl"
 brew "zsh"
 brew "zsh-autosuggestions"
+brew "d12frosted/emacs-plus/emacs-plus"
+cask "adium"
 cask "alfred"
 cask "apache-couchdb"
 cask "appcleaner"
@@ -59,19 +73,19 @@ cask "docker"
 cask "docker-toolbox"
 cask "firefox"
 cask "flux"
-cask "franz"
 cask "google-chrome"
 cask "graphiql"
 cask "iterm2"
-cask "karabiner-elements"
+cask "java"
+cask "mark-text"
 cask "postman"
 cask "skype"
-cask "skype-for-business"
 cask "slack"
 cask "spotify"
 cask "telegram"
 cask "the-unarchiver"
 cask "tunnelblick"
+cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
